--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,15 @@
     padding: 10px 20px;
     font-family: 'Neuzeit Grotesk Bold', sans-serif
 }
+.container {
+}
 .skills {
+    color: #fff;
+    margin: 10px auto 0;
+    font-size: 60px;
+    line-height: 80px;
     text-align: center;
+    font-family: 'Poppins Bold', sans-serif;
 }
 .img-home {
     border-radius: 50%;
@@ -27,6 +34,10 @@
     max-width: 80%;
     height: auto;
     width: 250px;
+}
+.social-media {
+    text-align: center;
+    margin-top: 75px;
 }
 .projects {
     background-color: white;
@@ -45,7 +56,7 @@
 .projects h2 {
     color: rgba(0, 0, 0, .1);
     text-align: center;
-    margin: 90px 0 30px;
+    margin: 80px 0 30px;
     font-size: 40px;
 }
 .projects a {
@@ -54,7 +65,31 @@
     text-decoration: none;
     transition: border .3s ease-in-out;
 }
-.projects .container {
-    position: absolute;
-    top: 80px;
+.contact {
+    background-color: purple;
+    min-height: 600px;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    flex-direction: column;
+}
+.contact-title {
+    text-align: center;
+}
+.connect {
+}
+.contact-text {
+    text-align: center;
+    float: left;
+}
+.contact p {
+    font-size: 2em;
+    font-family: fantasy;
+    margin-bottom: 5px;
+}
+.contact-buttons {
+    display: grid;
 }
