--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
     z-index: 4;
     transition: background-color .3s ease;
     will-change: transform;
+    padding: 10px 20px;
 }
 .logo {
     color: white;
@@ -53,8 +54,7 @@
 .nav-social {
     display: flex;
     align-items: center;
-    padding-right: 12px;
-    margin-left: auto;
+    padding: 0 20px 0 20px;
 }
 header .fab {
     display: none;
