--- a/css/main.css
+++ b/css/main.css
@@ -186,7 +186,7 @@ header .fab {
     font-size: 40px;
 }
 .contact {  
-    background-color: white;
+    background-color: rebeccapurple;
     min-height: 600px;
     height: 100vh;
     width: 100%;
@@ -197,11 +197,11 @@ header .fab {
     flex-direction: column;
 }
 .contact-title {
+    color: white;
     text-align: center;
 }
-.connect {
-}
 .contact-text {
+    color: white;
     text-align: center;
 }
 .contact p {
