--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ header .fab {
 .fab {
     font-size: 18px;
 }
-.home {
+#welcome-section {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -86,7 +86,7 @@ header .fab {
     position: relative;
     flex-direction: column;
 }
-.home::before {
+#welcome-section::before {
     content: '';
     background-image: linear-gradient(180deg,rgba(0, 0, 0, .8) 0, transparent 50%, transparent 90%, rgba(0, 0, 0, .8));
     position: absolute;
