--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,12 @@
-
+html {
+    scroll-behavior: smooth;
+}
 .navbar {
-    background-color: rebeccapurple;
     top: 0;
     display: flex;
     align-items: center;
     color: white;
-    height: 80px;
+    height: 64px;
     font-weight: 300;
     font-family: 'Poppins Light', sans-serif;
     font-size: 12px;
@@ -19,10 +20,10 @@
     padding: 10px 20px;
 }
 .navbarMove {
-    height: 50px;
-    
+    background-color: #1c1d21;
 }
 .logo {
+    display: none;
     color: white;
     font-weight: 700;
     font-size: 16px;
@@ -30,6 +31,11 @@
     letter-spacing: -2px;
     padding: 10px 20px;
     font-family: 'Neuzeit Grotesk Bold', sans-serif
+}
+@media (min-width: 400px) {
+    .logo {
+        display: block; 
+    }
 }
 .site-nav {
     margin: 0 auto;
@@ -44,8 +50,13 @@
     display: inline-block;
     font-weight: 300;
     letter-spacing: 1.2px;
-    font-size: 12px;
+    font-size: 10px;
     padding: 14px 11px;
+}
+@media (min-width: 450px) {
+    .site-nav a {
+    font-size: 12px;
+    }
 }
 .site-nav a:hover {
     color: white;
@@ -64,12 +75,13 @@
 }
 header .fab {
     display: none;
-    font-size: 40px;
+    font-size: 30px;
+    color: white;
 }
 .btn:hover {
     color: white !important;
 }
-@media (min-width: 496px) {
+@media (min-width: 500px) {
     header .fab {
         display: block;
     }
@@ -192,7 +204,7 @@ header .fab {
     font-size: 40px;
 }
 .contact {  
-    background-color: rebeccapurple;
+    background-color: #1c1d21;
     min-height: 600px;
     height: 100vh;
     width: 100%;
