--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,28 @@ time, mark, audio, video {
 html {
     scroll-behavior: smooth;
 }
+#particles-js canvas {
+    display: block;
+    vertical-align: bottom;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
+}
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0
+}
 #particles-js .particles-js-canvas-el {
     position: fixed;
-    background-color: #485564;
+    background-color:rgb(69, 90, 100);
 }
 h1, li, a, ul {
     color: #fff !important;
