--- a/new/gatsby-starter-default/src/components/layout/styles.css
+++ b/new/gatsby-starter-default/src/components/layout/styles.css
@@ -1,54 +1,54 @@
 @font-face {
-    font-family: "Rubik-Regular";
-    src: url("../../fonts/Rubik-Regular.ttf");
+	font-family: "Rubik-Regular";
+	src: url("../../fonts/Rubik-Regular.ttf");
 }
 
 @font-face {
-    font-family: "Rubik-Italic";
-    src: url("../../fonts/Rubik-Italic.ttf");
+	font-family: "Rubik-Italic";
+	src: url("../../fonts/Rubik-Italic.ttf");
 }
 
 @font-face {
-    font-family: "Rubik-BoldItalic";
-    src: url("../../fonts/Rubik-BoldItalic.ttf");
+	font-family: "Rubik-BoldItalic";
+	src: url("../../fonts/Rubik-BoldItalic.ttf");
 }
 
 @font-face {
-    font-family: "Rubik-Bold";
-    src: url("../../fonts/Rubik-Bold.ttf");
+	font-family: "Rubik-Bold";
+	src: url("../../fonts/Rubik-Bold.ttf");
 }
 
 .layout {
-    background-color: gray;
-    flex: 1;
-    font-family: "Rubik-Regular", sans-serif;
+	background-color: gray;
+	flex: 1;
+	font-family: "Rubik-Regular", sans-serif;
 }
 
 .layout h1 {
-    font-size: 48px;
+	font-size: 48px;
 }
 
 .layout h2 {
-    font-size: 40px;
+	font-size: 40px;
 }
 
 .layout h3 {
-    font-size: 32px;
-    margin-bottom: 30px;
+	font-size: 32px;
+	margin-bottom: 30px;
 }
 
 .layout h4 {
-    font-size: 24px;
+	font-size: 24px;
 }
 
 .layout p {
-    font-size: 16px;
+	font-size: 16px;
 }
 
-.layout a {
-    text-decoration: none;
+a {
+	text-decoration: none;
 }
 
 .layout .container {
-    padding: 50px 10%;
+	padding: 50px 10%;
 }
