--- a/new/gatsby-starter-default/src/components/header/styles.css
+++ b/new/gatsby-starter-default/src/components/header/styles.css
@@ -1,6 +1,6 @@
 header {
 	height: 80px;
-	background-color: #485564;
+	background-color: #3ebd93;
 	display: flex;
 	position: fixed;
 	flex-direction: row;
@@ -9,6 +9,7 @@ header {
 	justify-content: center;
 	width: 100%;
 	transition: all 0.8s ease;
+	z-index: 2;
 }
 
 header.header.move {
@@ -22,14 +23,15 @@ header .logo {
 	font-weight: 400;
 	padding: 0.375rem 0.75rem;
 	white-space: nowrap;
-	color: #fff;
+	color: #000;
 	font-family: "Rubik-Bold", sans-serif;
 	border-radius: 0.25rem;
 	transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
 		box-shadow 0.15s ease-in-out, transform 0.8s ease;
 }
 header .logo.move {
-	transform: translateX(-320%);
+	transform: translateX(-370%);
+	color: #fff;
 }
 header .logo:hover {
 	background-color: #ffc107;
@@ -65,7 +67,8 @@ header .icon {
 	transition: transform 0.8s ease;
 }
 header .icon.move {
-	transform: translateX(605%);
+	transform: translateX(695%);
+	color: #fff;
 }
 header button {
 	width: 40px;
