--- a/new/gatsby-starter-default/src/components/projects/styles.css
+++ b/new/gatsby-starter-default/src/components/projects/styles.css
@@ -1,5 +1,7 @@
 .projetos {
-  background: #fff;
-  display: flex;
-  flex-direction: column;
+	background: transparent;
+	display: flex;
+	flex-direction: column;
+	height: 500px;
+	justify-content: center;
 }
