--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -1,84 +1,159 @@
 header {
-	height: 80px;
-	background-color: #3ebd93;
 	display: flex;
-	position: fixed;
-	flex-direction: row;
+	height: 60px;
+}
+header .wrapper {
+	display: flex;
 	align-items: center;
-	padding: 0 25px;
-	justify-content: center;
+	flex-direction: row;
 	width: 100%;
-	transition: all 0.8s ease;
-	z-index: 5;
+	background-color: #fff;
+	transition: background-color 0.1s ease-out, transform 0.8s ease-out;
+	z-index: 2;
+	transition: transform 600ms ease 0s;
 }
-
-header.header.move {
-	background-color: transparent;
+header .wrapper.click {
+	transform: translate3d(-72%, 0px, 0px);
 }
-
-header .logo {
-	letter-spacing: -2px;
-	outline: none;
-	font-size: 24px;
-	font-weight: 400;
-	padding: 0.375rem 0.75rem;
-	white-space: nowrap;
-	color: #000;
+header .wrapper .logo {
+	font-weight: 700;
+	letter-spacing: 0px;
+	line-height: 28px;
+	text-align: left;
+	flex: 1;
+	margin-left: 1.2rem;
+	color: #292f35;
 	font-family: "Rubik-Bold", sans-serif;
-	border-radius: 0.25rem;
-	transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
-		box-shadow 0.15s ease-in-out, transform 0.8s ease;
 }
-header .logo.move {
-	transform: translateX(-370%);
+header .wrapper .icon {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	color: #484848;
+	transition: transform 0.3s ease-out, opacity 0.3s,
+		-webkit-transform 0.3s ease-out;
+	padding: 1rem;
+	cursor: pointer;
+	background-color: #be4242;
+	border: none;
+	outline: none;
+}
+header .wrapper .icon.move {
+	pointer-events: all;
+	opacity: 1;
+	cursor: pointer;
+	transform: translate3d(0%, 0, 0);
+}
+header .wrapper .icon.click {
+	pointer-events: all;
+	opacity: 1 !important;
+	cursor: pointer;
+	transform: translate3d(0%, 0, 0) !important;
+}
+header .aside {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	width: calc(80% - 24px);
+	align-items: center;
+	position: absolute;
+	background-color: #292f35;
+	padding-top: 100px;
+	transform: translate3d(137%, 0%, 0);
+	transition: transform 600ms ease 0s;
+	z-index: 2;
+}
+
+header .aside a {
+	color: #e8e8e8;
+	font-weight: 700;
+	height: 44px;
+	margin: 0px 12px;
+	padding: 0px 16px;
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+header .aside a:hover {
 	color: #fff;
 }
-header .logo:hover {
-	background-color: #ffc107;
+header .aside-menu a::after {
+	background-color: #be4242;
+	content: "";
+	width: 5px;
+	opacity: 0;
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
 }
-header .logo:active {
-	box-shadow: 0 0 0 0.2rem rgba(255, 193, 7, 0.5);
+header .aside .aside-menu {
+	height: 350px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+header .aside .social-icons {
+	display: flex;
+	justify-content: space-around;
+	margin-top: 75px;
+	width: 100%;
+}
+header .aside.click {
+	transform: translate3d(38%, 0px, 0px);
 }
 header ul {
-	display: flex;
-	transition: transform 0.8s ease;
-}
-header .menu.move {
-	transform: translateY(-210%);
+	display: none;
 }
 
-header li a {
-	color: #fff;
-	font-size: 20px;
-	margin: 0 10px;
-	font-family: "Rubik-Regular", sans-serif;
-	text-decoration: none;
-	text-transform: uppercase;
-}
-header li a:hover {
-	color: #ffc107;
-}
-header .icon {
-	color: #000;
-	font-size: 32px;
-	padding: 0.375rem 0.75rem;
-	display: flex;
-	align-items: center;
-	transition: transform 0.8s ease;
-}
-header .icon.move {
-	transform: translateX(695%);
-	color: #fff;
-}
-header button {
-	width: 40px;
-	height: 40px;
-	border-radius: 25px;
-	border: none;
-	cursor: pointer;
-	background-color: #000;
-}
-header button p {
-	color: #fff;
-	font-size: 16px;
+@media (min-width: 1140px) {
+	header {
+		height: 80px;
+	}
+	header .wrapper {
+		display: grid;
+		grid-template-columns: 240px 1fr 240px;
+	}
+	header .wrapper ul {
+		display: flex;
+		justify-content: center;
+	}
+	header .wrapper li a {
+		display: flex;
+		align-items: center;
+		color: #292f35;
+		font-size: 1rem;
+		position: relative;
+		margin: 0 1rem;
+		height: 44px;
+		outline: none;
+	}
+	header ul .wrapper li:hover a::after {
+		width: 1.6rem;
+	}
+	header ul .wrapper li a::after {
+		content: "";
+		position: absolute;
+		bottom: -0.5rem;
+		left: 0;
+		width: 0;
+		height: 0.15rem;
+		background-color: #008489;
+		-webkit-transition: width 0.2s;
+		transition: width 0.2s;
+	}
+	header .wrapper .social-icons {
+		display: flex;
+		justify-content: space-around;
+		height: 100%;
+		align-items: center;
+		background: #be4242;
+	}
+	header .wrapper .social-icons a {
+		color: #fff;
+	}
+	header .wrapper .icon {
+		display: none;
+	}
 }
