--- a/src/components/projects-slick/styles.css
+++ b/src/components/projects-slick/styles.css
@@ -11,7 +11,7 @@
 	border-radius: 8px;
 	box-shadow: rgb(62, 189, 147) 0px 4px 4px;
 	transition: all 0.25s ease 0s;
-	height: 200px;
+	height: 220px;
 	width: 96% !important;
 	box-sizing: border-box;
 	margin-left: 2%;
@@ -52,6 +52,7 @@
 	clip-path: polygon(0px 0%, 100% 0%, calc(100% - 20px) 100%, 0% 100%);
 	background-color: #00000096;
 	align-self: baseline;
+	height: 100%;
 }
 .projetos .icons {
 	padding: 10px;
