--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -20,6 +20,9 @@
 html {
 	font-size: 20px;
 	font-family: "Rubik-Regular", sans-serif;
+	position: fixed;
+	width: 100%;
+	height: 100%;
 }
 .layout {
 	background-color: #be4242;
