--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -27,12 +27,15 @@ html {
 .layout {
 	background-color: #be4242;
 	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 .layout canvas {
 	position: fixed;
 }
 .layout h1 {
-	font-size: 1.6rem;
+	font-size: 1.4rem;
 	font-weight: lighter;
 	letter-spacing: -1.5px;
 }
@@ -54,8 +57,7 @@ a {
 }
 
 .layout .container {
-	padding: 50px 10%;
-	position: relative;
+	padding: 0px 24px;
 }
 footer {
 	background-color: #ffe88c;
