--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -17,11 +17,19 @@ header .wrapper.click {
 	transform: translate3d(-80%, 0px, 0px);
 }
 header .wrapper .logo {
+	flex: 1;
+	align-items: center;
+	display: flex;
+	height: 100%;
+}
+header .wrapper .logo a {
+	display: flex;
+	align-items: center;
+	height: 100%;
 	font-weight: 700;
 	letter-spacing: 0px;
 	line-height: 28px;
 	text-align: left;
-	flex: 1;
 	color: #292f35;
 	font-family: "Rubik-Bold", sans-serif;
 }
@@ -34,7 +42,7 @@ header .wrapper .icon {
 		-webkit-transform 0.3s ease-out;
 	padding: 1rem;
 	cursor: pointer;
-	background-color: #be4242;
+	background-color: #1b85a8;
 	border: none;
 	outline: none;
 }
@@ -80,7 +88,7 @@ header .aside a:hover {
 	color: #fff;
 }
 header .aside-menu a::after {
-	background-color: #be4242;
+	background-color: #1b85a8;
 	content: "";
 	width: 5px;
 	opacity: 0;
@@ -154,7 +162,7 @@ header .wrapper .social-icons {
 		justify-content: space-around;
 		height: 100%;
 		align-items: center;
-		background: #be4242;
+		background: #1b85a8;
 	}
 	header .wrapper .social-icons a {
 		color: #fff;
