--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -25,7 +25,7 @@ html {
 	height: 100%;
 }
 .layout {
-	background-color: #be4242;
+	background-color: #1b85a8;
 	flex: 1;
 	display: flex;
 	flex-direction: column;
@@ -35,7 +35,7 @@ html {
 	position: fixed;
 }
 .layout h1 {
-	font-size: 1.4rem;
+	font-size: 1.6rem;
 	font-weight: lighter;
 	letter-spacing: -1.5px;
 }
@@ -63,5 +63,5 @@ footer {
 	background-color: #ffe88c;
 }
 footer a {
-	color: #3ebd93;
+	color: #1b85a8;
 }
