--- a/src/components/experiences/styles.css
+++ b/src/components/experiences/styles.css
@@ -1,4 +1,4 @@
-.projects {
+.experiences {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -7,6 +7,6 @@
 	width: 100%;
 	background-color: #292f35;
 }
-.projects h1 {
+.experiences h1 {
 	width: 100%;
 }
