--- a/src/components/project/styles.css
+++ b/src/components/project/styles.css
@@ -1,5 +1,5 @@
 .project {
-	display: grid;
+	display: flex;
 	flex-direction: column;
 	height: 100%;
 	-moz-box-pack: center;
@@ -7,12 +7,15 @@
 	gap: 24px;
 }
 .project .image-item {
-	height: 50vw;
+	height: 48vw;
 	background-color: #31373e;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	border-radius: 10px 10px 0 0;
+}
+.project .image-item img {
+	height: 100%;
 }
 .project .info-item {
 	display: flex;
@@ -29,42 +32,114 @@
 	line-height: 44px;
 	color: #292f35;
 }
-.project .info-item p {
+.project .info-item .category {
+	font-size: 12px;
+	font-weight: 500;
+	line-height: 1;
+	padding: 6px 8px;
+	border-radius: 4px;
+	background-color: #31373e;
+	color: #ffd24e;
+}
+.project .info-item .description {
 	font-size: 0.8rem;
 	font-weight: 400;
 	letter-spacing: 0;
 	text-align: left;
 	line-height: 28px;
 	color: #292f35;
+	margin-bottom: 12px;
+}
+.project .info-item .live {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 100%;
+	align-items: center;
+}
+.project .info-item .live a {
+	-moz-box-align: center;
+	align-items: center;
+	background-color: transparent;
+	display: inline-flex;
+	cursor: pointer;
+	font-size: 18px;
+	font-weight: 700;
+	line-height: 1;
+	padding: 12px 16px;
+	background-color: #fff;
+	color: #292f35;
+	border-radius: 10px;
+	transition: transform 0.5s ease;
+	text-transform: capitalize;
+	justify-content: center;
+	width: 17ch;
+	margin-top: 24px;
+}
+.project .info-item .live a:hover {
+	transform: scale(1.1);
+}
+.project .info-item .live a svg {
+	font-size: 18px;
+	margin: 0 5px;
 }
 @media (min-width: 768px) {
-	.project {
-		grid-template-columns: 1fr 1fr;
-	}
 	.project .image-item {
 		height: 25vw;
 	}
+	.project .info-item .live {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	.project {
+		flex-direction: row;
+		flex-wrap: wrap;
+	}
+	.project .item {
+		width: 48%;
+	}
+}
+@media (min-width: 930px) {
 }
 @media (min-width: 1140px) {
-	.project {
-		grid-template-columns: none;
+	.project .item {
+		width: 100%;
 	}
 	.project .item {
 		display: flex;
 		flex-direction: row-reverse;
 	}
+	.project .item .title {
+		flex-flow: row;
+		align-items: center;
+	}
 	.project .item:nth-child(odd) {
 		display: flex;
 		flex-direction: row-reverse;
+	}
+	.project .item:nth-child(odd) .image-item {
+		border-radius: 0 10px 10px 0;
+	}
+	.project .item:nth-child(odd) .info-item {
+		border-radius: 10px 0 0 10px;
 	}
 	.project .item:nth-child(even) {
 		display: flex;
 		flex-direction: row;
 	}
+	.project .item:nth-child(even) .image-item {
+		border-radius: 10px 0 0 10px;
+	}
+	.project .item:nth-child(even) .info-item {
+		border-radius: 0 10px 10px 0;
+	}
 	.project .image-item {
 		width: 50%;
+		min-height: 250px;
+		height: auto;
 	}
 	.project .info-item {
 		width: 50%;
+		justify-content: center;
 	}
 }
