--- a/src/components/intro/styles.css
+++ b/src/components/intro/styles.css
@@ -1,3 +1,13 @@
+.background {
+	display: flex;
+	justify-content: center;
+	background: url("../../images/park-lights-on.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	-webkit-filter: brightness(0.6) contrast(1.5);
+	animation: 4s ease 4s 1 normal forwards running background;
+}
 .intro {
 	-moz-box-align: center;
 	align-items: center;
@@ -6,7 +16,7 @@
 	flex-direction: column;
 	max-width: 32ch;
 	opacity: 0;
-	height: 100vh;
+	height: 80vh;
 	margin-top: 110px;
 	align-self: center;
 	padding: 0px 24px;
@@ -18,6 +28,14 @@
 	}
 	100% {
 		opacity: 1;
+	}
+}
+@keyframes background {
+	0% {
+		-webkit-filter: brightness(0.6) contrast(1.5);
+	}
+	100% {
+		-webkit-filter: brightness(1.4) contrast(1.1) opacity(0.9) saturate(1.2);
 	}
 }
 .intro h1 {
