--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -27,6 +27,7 @@ html {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	background-color: #1b85a8;
 }
 .layout canvas {
 	position: fixed;
