--- a/src/components/tech/styles.css
+++ b/src/components/tech/styles.css
@@ -1,10 +1,17 @@
 .tech {
-	display: grid;
+	display: flex;
 	flex-direction: column;
 	height: 100%;
 	-moz-box-pack: center;
 	justify-content: center;
-	gap: 24px;
+}
+.tech .item {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	-moz-box-pack: center;
+	justify-content: center;
+	margin: 10px 0;
 }
 .tech .image-item {
 	height: 50vw;
@@ -38,6 +45,16 @@
 	color: #292f35;
 }
 @media (min-width: 768px) {
+	.tech {
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: stretch;
+	}
+
+	.tech .item {
+		width: 49%;
+	}
 	.tech .image-item {
 		height: 25vw;
 	}
@@ -48,10 +65,8 @@
 	}
 }
 @media (min-width: 1140px) {
-	.tech {
-		grid-template-columns: none;
-	}
 	.tech .item {
+		width: 100%;
 		display: flex;
 		flex-direction: row-reverse;
 	}
