--- a/src/components/button/styles.css
+++ b/src/components/button/styles.css
@@ -8,13 +8,15 @@ a.button {
 	font-weight: 700;
 	line-height: 1;
 	padding: 16px 32px;
-	background-color: #fff;
-	color: #1b85a8;
+	background-color: var(--orange-light);
+	color: var(--dark-gray);
 	border-radius: 10px;
 	transition: transform 0.5s ease;
 	text-transform: capitalize;
 	justify-content: center;
-	width: 23ch;
+	width: 21ch;
+	align-self: center;
+	margin: 3vh 0;
 }
 a.button:hover {
 	transform: scale(1.1);
