--- a/src/components/techs/styles.css
+++ b/src/components/techs/styles.css
@@ -5,7 +5,7 @@
 	gap: 24px;
 	margin: 0px auto;
 	width: 100%;
-	background-color: #292f35;
+	background-color: var(--bg-color);
 }
 .techs h1 {
 	width: 100%;
